cc_library(
    name = "ast",
    hdrs = ["ast.hh"],
    visibility = ["//visibility:public"],
    deps = [
        "@antlr4_runtimes//:cpp",
    ],
)

cc_library(
    name = "bytecode_emitter",
    hdrs = ["bytecode_emitter.hh"],
    srcs = ["bytecode_emitter.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gabime_spdlog//:spdlog",
        "@antlr4_runtimes//:cpp",
        "//src/ast:ast",
        "//src/bytecode:bytecode",
    ],
)
